function-source_nodejs16/odyssey-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: public-ord1
    metallb.universe.tf/allow-shared-ip: default
  name: odyssey-server
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: odysseyserver
      port: 7777
      protocol: UDP
      targetPort: 7777
  selector:
    name: odyssey-server
